# MyGui

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
cmake/: my_code_generator.cmake
code_generator/: CMakeLists.txt  Main.cpp  MetaAttributeStringParser.cpp  MetaAttributeStringParser.h
private/: CoreApplication.cpp  EasyApplication.cpp  GuiDrawObject.cpp  ImGuiDrawable.cpp  ThreadTaskQueue.cpp  VkException.cpp  VulkanGuiApplication.cpp
private/Core/: Class.cpp  Enum.cpp  Struct.cpp  Type.cpp
private/GUI/: FieldBrowser.cpp
private/Graphics/: VulkanGraphics.cpp
private/Reflect/: Class.cpp  Enum.cpp  Struct.cpp  Type.cpp
public/: CoreApplication.h  EasyApplication.h  EasyGui.h  EasyGuiForward.h  GuiDrawObject.h  ImGuiDrawable.h  ImGuiImpl.h  MyCpp.h  MyCppForward.h  MyGui.h  MyGuiForward.h  Queue.h  ThreadTaskQueue.h  VkException.h  VulkanGuiApplication.h
public/Core/: Class.h  Enum.h  Field.h  Function.h  Object.h  Record.h  Reflect.h  Struct.h  Type.h
public/GUI/: FieldBrowser.h
public/Graphics/: Graphics.h  VulkanGraphics.h
public/Reflect/: Class.h  Enum.h  Field.h  Record.h  Struct.h  Type.h
tests/: CMakeLists.txt  Catch2Main.cpp  CoreApplicationTest.cpp  QueueTaskQueueTest.cpp  QueueTest.cpp  VulkanGuiApplicationTest.cpp
